# POS_CHATAPP

./: CMakeLists.txt  main.cpp
Klient/: AccountClient.cpp  AccountClient.h  Client.cpp  Client.h
Server/: AccountServer.cpp  AccountServer.h  Server.cpp  Server.h
SubMenus/: SubMenus.cpp  SubMenus.h
Variables/: BufferInput.cpp
